# AnotherOneFSM

./: CMakeLists.txt  LICENSE  README.md
aofsm/src/: CMakeLists.txt  aofsm.cpp  aofsm.h  array_of_actions.h  def_trans.h  generate_states_ptr_array.h  generate_transition_data.h  invalid_action.h  invalid_state.h  state.cpp  state.h  state_info.h  state_machine.cpp  state_machine.h  state_machine_aliases.h  state_machine_context.h  state_machine_description.cpp  state_machine_description.h  state_machine_instance.cpp  state_machine_instance.h  state_machine_simple.h  state_transitions.h  state_transitions_generator.h  state_transitions_holder.h  state_transitions_list.h  states_array.h  states_array_generator.h  states_array_holder.h  states_list.h  states_ptr_array_holder.h  std_types.h  transition.cpp  transition.h  transition_data.h  transition_data_holder.h  transition_description.h  transition_map.cpp  transition_map.h  value_holder.h
aofsm/src/internal/: array_of_actions.cpp  array_of_actions.h  state_info.cpp  state_info.h  state_machine_aliases.h  state_machine_context.h  state_machine_description.h  state_machine_transition.h  state_machine_transition_action.h  state_machine_transition_data.h  state_machine_transition_table.h  transition_data.h
aofsm/src/state_machine_v1/: state_machine.cpp  state_machine.h  state_machine_description.cpp  state_machine_description.h
aofsm/src/state_machine_v2/: def_trans.h  generate_states_ptr_array.h  generate_transition_data.h  invalid_action.h  state_machine.h  state_machine_context.h  state_machine_description.h  state_transitions.h  states_ptr_array_holder.h  transition_data.h  transition_data_holder.h  transition_description.h
aofsm/tst/: CMakeLists.txt  client1.h  client_v2.cpp  client_v2.h  state_machine_01_basics_tst.cpp  state_machine_02_action_with_param_tst.cpp  state_machine_03_multiple_actions_tst.cpp  state_machine_04_transition_with_guard_tst.cpp  state_machine_05_default_action_tst.cpp  state_machine_06_default_transition_tst.cpp  state_machine_09_all_features_tst.cpp  state_machine_action_with_param_tst.cpp  state_machine_interface_tst.cpp  state_machine_matrix_initialisation_tst.cpp  state_machine_multiple_actions_tst.cpp  state_machine_transition_with_guard_tst.cpp  state_machine_tst.cpp  state_machine_usability_tst.cpp  transition_map_template_tst.cpp
(+1 files in other folders)
