add_library(aofsm 
                  array_of_actions.cpp array_of_actions.h
                  state_info.cpp state_info.h
                  state_machine_description.cpp state_machine_description.h
                  state_machine.cpp state_machine.h
                  transition.cpp transition.h
                  )
            