add_library(aofsm 
                  state_machine_v1/state_machine.cpp state_machine_v1/state_machine.h 
                  state_machine_v1/state_machine_description.cpp state_machine_v1/state_machine_description.h
                  array_of_actions.cpp array_of_actions.h
                  state_info.cpp state_info.h
                  transition.cpp transition.h
                  )
            